syntax = "proto3";

option java_multiple_files = true;
option java_package = "services.smartCoffee";

package services.smartCoffee;

// Service Methods
service SmartCoffeeMachine {
  rpc BrewCoffee (BrewCoffeeRequest) returns (ActionResponse) {}
  rpc CheckInventory (CheckInventoryRequest) returns (InventoryResponse) {}
  rpc RefillInventory (RefillItemRequest) returns (InventoryResponse) {}
}

// Utility types
enum CoffeeType {
  UNKNOWN_COFFEE = 0;
  AMERICANO = 1;
  FLAT_WHITE = 2;
  CORTADO = 3;
}

enum InventoryItem {
  UNKNOWN_ITEM = 0;
  MILK = 1;
  WATER = 2;
  COFFEE_BEANS = 3;
}

enum ErrorCode {
  NONE = 0;
  SYSTEM_ERROR = 1;
}

message ActionResponse {
  bool success = 1;
  ErrorCode error_code = 2;
}

// Request/Response Methods
message BrewCoffeeRequest {
  CoffeeType coffeeType = 1;
}

message CheckInventoryRequest {
  InventoryItem item = 1;
}

message RefillItemRequest {
  InventoryItem item = 1;
  int32 quantity = 2;
}

message InventoryResponse {
  int32 quantity = 1;
  bool success = 2;
}